# ollaborative-filtering-system

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.ninja  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-0d3e1cd8e0362b3d4a72.json  cache-v2-9c6cbb4963164494474f.json  cmakeFiles-v1-4b1c84938668e7ad5333.json  cmakeFiles-v1-c494a26e38897288bd3b.json  codemodel-v2-18cfd006aafe33ff0863.json  codemodel-v2-c08d9817ac3f40639bd6.json  index-2025-06-12T14-36-52-0402.json  index-2025-06-12T15-14-34-0254.json  target-RecommenderCore-Debug-71fddd7e3fc3f8d6b4de.json  target-RecommenderCore-Debug-9d2269e47bb35d42c3a6.json  target-recsys-Debug-19bb2b1136a0e542fd01.json  toolchains-v1-5323d4d295a229b9a975.json
src/: CMakeLists.txt  main.cpp
src/Algorithms/: Evaluation.cpp  Evaluation.h  Predictor.cpp  Predictor.h  Recommender.cpp  Recommender.h  Similarity.cpp  Similarity.h
src/DataHandler/: CSVLoader.cpp  CSVLoader.h
src/Models/: Item.cpp  Item.h  Rating.cpp  Rating.h  User.cpp  User.h
src/Utils/: Cache.h
tests/: CMakeLists.txt  test_data_handling.cpp  test_evaluation.cpp  test_hybrid.cpp  test_main.cpp  test_predictor.cpp  test_recommender.cpp  test_similarity.cpp
